2.1.1/_sources/gallery/user_interfaces/embedding_in_gtk_sgskip.rst.txt


.. _sphx_glr_gallery_user_interfaces_embedding_in_gtk_sgskip.py:


================
Embedding In GTK
================

Show how to add a matplotlib FigureCanvasGTK or FigureCanvasGTKAgg widget to a
gtk.Window



.. code-block:: python


    import gtk

    from matplotlib.figure import Figure
    from numpy import arange, sin, pi

    # uncomment to select /GTK/GTKAgg/GTKCairo
    #from matplotlib.backends.backend_gtk import FigureCanvasGTK as FigureCanvas
    from matplotlib.backends.backend_gtkagg import FigureCanvasGTKAgg as FigureCanvas
    #from matplotlib.backends.backend_gtkcairo import FigureCanvasGTKCairo as FigureCanvas


    win = gtk.Window()
    win.connect("destroy", lambda x: gtk.main_quit())
    win.set_default_size(400, 300)
    win.set_title("Embedding in GTK")

    f = Figure(figsize=(5, 4), dpi=100)
    a = f.add_subplot(111)
    t = arange(0.0, 3.0, 0.01)
    s = sin(2*pi*t)
    a.plot(t, s)

    canvas = FigureCanvas(f)  # a gtk.DrawingArea
    win.add(canvas)

    win.show_all()
    gtk.main()

**Total running time of the script:** ( 0 minutes  0.000 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: embedding_in_gtk_sgskip.py <embedding_in_gtk_sgskip.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: embedding_in_gtk_sgskip.ipynb <embedding_in_gtk_sgskip.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
